fix collapse

--- a/src/components/gwf-vis-host-sidebar-item-container/gwf-vis-host-sidebar-item-container.css
+++ b/src/components/gwf-vis-host-sidebar-item-container/gwf-vis-host-sidebar-item-container.css
@@ -20,6 +20,6 @@
 }
 
 gwf-vis-host-collapse::part(header),
-gwf-vis-host-collapse::part(content) {
+gwf-vis-host-collapse:not([collapsed])::part(content) {
   padding: var(--leaflet-control-margin);
 }
